macros/tests/ui/fail_function_empty.rs
use surql_macros::surql_function;

#[surql_function("")]
fn no_name() {}

fn main() {}
